cmake_minimum_required(VERSION 3.10)
project(alged)

set(CMAKE_C_STANDARD 99)


add_executable(alged_att1 att1.c)
add_executable(alged_att2 att2.c)
add_executable(alged_att3 att3.c)
add_executable(alged_att4 att4.c)
add_executable(alged_att5 att5.c)
add_executable(alged_att6 att6.c)
add_executable(alged_att7 att7.c)
add_executable(alged_att8 att8.c)
add_executable(alged_att9 att9.c)
add_executable(alged_att10 att10.c)